--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #No subo toda la salida de pdflatex
 
-Ejercicio 3 - Aprendizaje Estadístico.aux
-Ejercicio 3 - Aprendizaje Estadístico.log
-Ejercicio 3 - Aprendizaje Estadístico.out
+Ejercicios/Informe/InformeGrymberg.aux
+Ejercicios/Informe/InformeGrymberg.log
+Ejercicios/Informe/InformeGrymberg.synctex.gz
+Ejercicios/Informe/InformeGrymberg.toc
 
